--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter",
-  "description": "Gatsby starter",
+  "name": "elprogreso",
+  "description": "El Progreso website",
   "version": "1.0.0",
   "engines": {
     "node": ">= 8.5.0"
@@ -9,8 +9,6 @@
     "babel-plugin-styled-components": "^1.9.2",
     "gatsby": "^2.0.61",
     "gatsby-image": "^2.0.22",
-    "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.11",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cache": "^1.0.0",
@@ -21,14 +19,9 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-remark-autolink-headers": "^2.0.12",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.1.3",
-    "gatsby-remark-smartypants": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.10",
     "gatsby-transformer-remark": "^2.1.15",
     "gatsby-transformer-sharp": "^2.1.9",
-    "prismjs": "^1.15.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
