--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.9.2",
+    "dotenv": "^6.2.0",
     "gatsby": "^2.0.61",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-manifest": "^2.0.11",
@@ -19,6 +20,7 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-source-contentful": "^2.0.18",
     "gatsby-source-filesystem": "^2.0.10",
     "gatsby-transformer-remark": "^2.1.15",
     "gatsby-transformer-sharp": "^2.1.9",
