--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gatsby-source-filesystem": "^2.0.10",
     "gatsby-transformer-remark": "^2.1.15",
     "gatsby-transformer-sharp": "^2.1.9",
+    "pigeon-maps": "^0.11.10",
+    "pigeon-marker": "^0.3.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
