--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
+    "react-images": "^0.5.19",
+    "react-photo-gallery": "^6.2.2",
     "styled-components": "^4.1.2"
   },
   "devDependencies": {
