--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pigeon-maps": "^0.11.10",
     "pigeon-marker": "^0.3.4",
     "react": "^16.6.3",
+    "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
