--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-netlify-cache": "^1.0.0",
     "gatsby-plugin-nprogress": "^2.0.7",
     "gatsby-plugin-offline": "^2.0.18",
+    "gatsby-plugin-prefetch-google-fonts": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sharp": "^2.0.14",
@@ -32,6 +33,8 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
     "react-images": "^0.5.19",
+    "react-reveal": "^1.2.2",
+    "react-scroll": "^1.7.10",
     "styled-components": "^4.1.2"
   },
   "devDependencies": {
