--- a/package.json
+++ b/package.json
@@ -38,14 +38,20 @@
     "validator": "^10.9.0"
   },
   "devDependencies": {
-    "eslint": "^5.9.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.10.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.5.0",
+    "eslint-config-afuh": "^0.1.33",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^1.2.0",
     "lint-staged": "^7.3.0",
+    "prettier": "^2.0.5",
     "stylelint": "^9.9.0",
-    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.5.1"
   },
