--- a/package.json
+++ b/package.json
@@ -3,54 +3,55 @@
   "description": "El Progreso website",
   "version": "1.0.0",
   "engines": {
-    "node": ">= 8.5.0"
+    "node": ">= 12"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
-    "dotenv": "^6.2.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.27.5",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-netlify": "^2.6.0",
     "gatsby-plugin-netlify-cache": "^1.0.0",
     "gatsby-plugin-nprogress": "^2.5.0",
-    "gatsby-plugin-offline": "^2.0.18",
+    "gatsby-plugin-offline": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sharp": "^2.9.1",
     "gatsby-plugin-sitemap": "^2.7.0",
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-contentful": "^2.3.56",
+    "gatsby-source-contentful": "^4.1.1",
     "gatsby-source-filesystem": "^2.6.1",
     "gatsby-transformer-remark": "^2.11.1",
     "gatsby-transformer-sharp": "^2.7.0",
-    "pigeon-maps": "^0.11.10",
+    "pigeon-maps": "^0.16.1",
     "pigeon-marker": "^0.3.4",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.11.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
+    "react-image": "^4.0.3",
     "react-images": "^0.5.19",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.1",
-    "styled-components": "^4.1.2",
-    "validator": "^10.9.0"
+    "styled-components": "^5.2.1",
+    "validator": "^13.5.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.14.0",
-    "eslint-config-afuh": "^0.1.34",
+    "eslint-config-afuh": "^0.2.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^1.2.0",
-    "lint-staged": "^7.3.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
     "prettier": "^2.2.1",
-    "stylelint": "^9.9.0",
+    "stylelint": "^13.8.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.5.1"
@@ -72,8 +73,7 @@
   "lint-staged": {
     "*.js": [
       "stylelint",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
